k8/1.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app-devops
  template:
    metadata:
      labels:
        app: python-app-devops
    spec:
      containers:
      - name: frontapp
        image: haroldo89/python-app:1
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - name: http-port
            containerPort: 80
