k8/2.service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service-clusterip
spec:
  selector:
    app: python-app-devops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
