k8/3.service-nodeport.yaml
# definicion de servicio externo.
apiVersion: v1
kind: Service
metadata:
  name: front-external-service-nodeport
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      # nodePort: 32500
  selector:
    app: python-app-devops
