k8/4.deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: frontapp
        image: haroldo89/python-app:1
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - name: http-port
            containerPort: 80
---
# definicion de servicio externo.
apiVersion: v1
kind: Service
metadata:
  name: front-external-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 32500
  selector:
    app: python-app
