k8/5.python-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: python-ingress
  # namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /python/*
        pathType: Prefix
        backend:
          service:
            name: front-external-service-nodeport
            port:
              number: 80
